test/corpus/fail/M0124.mo
=========
M0124.mo
=========

actor {
  public let foo = ()
}

---

(source_file
  (obj_dec
    (obj_sort)
    (obj_body
      (dec_field
        (vis)
        (let_dec
          (var_pat
            (identifier))
          (par_exp))))))
